bsd/p
dnsfunctions.c: In function 'ngethostbyname':
dnsfunctions.c:153:9: warning: implicit declaration of function 'syswrite' [-Wimplicit-function-declaration]
  153 |         syswrite(1,custom_inet_ntoa(a.sin_addr), len(custom_inet_ntoa(a.sin_addr);
      |         ^~~~~~~~
dnsfunctions.c:153:82: error: expected ')' before ';' token
  153 |         syswrite(1,custom_inet_ntoa(a.sin_addr), len(custom_inet_ntoa(a.sin_addr);
      |                                                     ~                            ^
      |                                                                                  )
dnsfunctions.c:153:83: error: expected ')' before '}' token
  153 |         syswrite(1,custom_inet_ntoa(a.sin_addr), len(custom_inet_ntoa(a.sin_addr);
      |                 ~                                                                 ^
      |                                                                                   )
  154 |     }
      |     ~                                                                              
dnsfunctions.c:153:83: error: expected ';' before '}' token
  153 |         syswrite(1,custom_inet_ntoa(a.sin_addr), len(custom_inet_ntoa(a.sin_addr);
      |                                                                                   ^
      |                                                                                   ;
  154 |     }
      |     ~                                                                              
